Display purchase orders on dashboard page